--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,30 @@
   }
 }
 
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    @apply w-2; 
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    @apply bg-transparent; 
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    @apply bg-gray-500 rounded-full; 
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-700 rounded-full; 
+  }
+
+  /* For Firefox */
+  .scrollbar {
+    scrollbar-width: thin; 
+    scrollbar-color: theme('colors.gray.500') transparent;
+  }
+}
+
 .text-gradient {
   background-image: linear-gradient(
     98.97deg,
@@ -109,3 +133,8 @@
   border: 2px solid;
   border-image-source: linear-gradient(91.74deg, #0db0ff 1.47%, #9747ff 77.27%);
 }
+
+.border-bottom {
+  border-top: 1px solid #2A2E31;
+}
+
