--- a/src/index.css
+++ b/src/index.css
@@ -81,23 +81,23 @@
 
 @layer utilities {
   .scrollbar::-webkit-scrollbar {
-    @apply w-2; 
+    @apply w-2;
   }
 
   .scrollbar::-webkit-scrollbar-track {
-    @apply bg-neutral-700 
+    @apply bg-neutral-700;
   }
 
   .scrollbar::-webkit-scrollbar-thumb {
-    @apply bg-gray-500 rounded-full; 
+    @apply bg-gray-500 rounded-full;
   }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
-    @apply bg-gray-700 rounded-full; 
+    @apply bg-gray-700 rounded-full;
   }
 
   .scrollbar {
-    scrollbar-width: thin; 
+    scrollbar-width: thin;
     scrollbar-color: theme('colors.gray.500') #3f3f46;
   }
 }
@@ -134,6 +134,10 @@
 }
 
 .border-bottom {
-  border-top: 1px solid #2A2E31;
+  border-top: 1px solid #2a2e31;
+}
+
+.gradient-3 {
+  background: linear-gradient(91.74deg, #82d6ff 1.47%, #b57cff 77.27%);
 }
 
